developerProject/force-app/main/default/objects/Score__c/Score__c.object-meta.xml
<CustomObject>
    <label>Score</label>
    <nameField>
        <label>Score名称</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>