developerProject/force-app/main/default/objects/Score__c/fields/Course_Number__c.field-meta.xml
<CustomField>
    <fullName>Course_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Number</label>
    <referenceTo>Training_Course__c</referenceTo>
    <relationshipLabel>Scores</relationshipLabel>
    <relationshipName>Scores</relationshipName>
    <type>Lookup</type>
</CustomField>