developerProject/force-app/main/default/objects/Score__c/fields/Student_Number__c.field-meta.xml
<CustomField>
    <fullName>Student_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Number</label>
    <referenceTo>Training_Student__c</referenceTo>
    <relationshipLabel>Scores</relationshipLabel>
    <relationshipName>Scores</relationshipName>
    <type>Lookup</type>
</CustomField>